fixed mobile stretching of sponsor logos

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -960,7 +960,7 @@ body
 		@media (max-width:767px)
 			max-width 120px
 			height auto
-			min-height 100px
+			//min-height 100px
 
 
 
